updated dependencies, dotnet, and styling guide

--- a/HybridFlow/appsettings.placeholder.json
+++ b/HybridFlow/appsettings.placeholder.json
@@ -7,6 +7,6 @@
   "RedirectHost": "https://127.0.0.1",
   "RedirectPort": "54567",
   "RedirectPath": "signin-oidc",
-  "Username": "REPLACE_WITH_USERNAME",
-  "Password": "REPLACE_WITH_PASSWORD"
+  "Username": "TEST_ONLY_REPLACE_WITH_USERNAME",
+  "Password": "TEST_ONLY_REPLACE_WITH_PASSWORD"
 }
