Detect chrome version

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,7 @@ jobs:
           fileLibrary: $(CredFileLibrary)
           filePath: /HybridFlow
 
-      - script: npm install chromedriver
+      - script: npm install chromedriver --detect_chromedriver_version
         displayName: 'Install chromedriver'
 
       - task: DotNetCoreCLI@2
